# x86jit

./: .gitignore  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.cargo/: config.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
backlog/: config.yml
backlog/decisions/: decision-1 - reserved-sparse-mmap-backing.md  decision-10 - Pull-OCI-test-images-from-a-registry-Route-A-skopeo-crane-digest-pinned-instead-of-committing-docker-save-tars.md  decision-11 - CPUID-advertises-AVX-AVX2-XSAVE-OSXSAVE-xgetbv-SSE4-stays-off-—-amends-decision-2.md  decision-12 - CPU-features-are-embedder-configured-CpuFeatures-not-hardcoded-—-supersedes-the-global-model-of-decision-2-11.md  decision-13 - AVX-512-write-masking-via-a-shared-blend-helper-per-op-MaskSpec-not-per-op-masked-IR-variants.md  decision-2 - cpuid-drop-sse4.md  decision-3 - jit-interp-unmapped-in-span.md  decision-4 - threaded-clock-host-monotonic.md  decision-5 - Background-tier-up-publishes-from-the-core-dispatcher-via-cache.upgrade-the-backend-never-touches-the-translation-cache.md  decision-6 - Threaded-clock-v2-virtual-monotonic-value-with-real-host-blocking-supersedes-decision-4s-clock-domain.md  decision-7 - Guard-pages-host-SIGSEGV-to-resumable-Exit-UnmappedMemory-supersedes-decision-3.md  decision-8 - Single-block-guest-registers-stay-write-through-—-SSA-Variable-promotion-measured-as-a-regression.md  decision-9 - Bound-check-stays-—-guard-page-BCE-unsafe-for-64-bit-out-of-span-RMW-same-EA-dedup-shipped.md  readme.md
backlog/docs/: architecture.md  commands.md  conventions.md  decisions.md  deferred.md  dev-setup.md  doc-33 - PS4-JIT-performance-roadmap.md  doc-34 - SIMD-helper-fallback-audit-—-games-hotness-ranking-task-236.md  glossary.md  performance.md  readme.md  status.md  working-on-tasks.md
backlog/milestones/: m-0 - bg-tier.md
backlog/tasks/: task-1 - M0-T1-—-Cargo-workspace-with-four-crates-`x86jit-core`-`x86jit-cranelift`-`.md  task-10 - M0-T10-—-Load-hand-assembled-bytes-decode-print-→-output-matches-`objdump-d`.md  task-100 - M7-T4c-—-Tier-is-baked-per-`Vm`-from-`VmConfig.consistency`-and-passed-to-`ma.md  task-101 - M8-T4-—-MXCSR-vector-FP-flags-rounding-mode-control-exception-flags.-No-p.md  task-102 - M4-T10-—-MMIO-trap-in-the-JIT.-The-JIT-bakes-the-guests-`Trap`-region-window.md  task-103 - FD-AOT-—-AOT-persistent-translation-cache-deferred-out-of-the-fast-dispatch.md  task-109.7 - P2.6-—-real-clock-sched_yield-in-mt-mode.md  (+312 more)
bench/: README.md
scripts/: lockstep.sh  perf-gate.sh  skills-bootstrap.sh  uid-guard.sh
wiki/: index.md
x86jit-bench/: Cargo.toml  README.md
x86jit-bench/src/: main.rs  report.rs  workloads.rs
x86jit-cli/: Cargo.toml  README.md
x86jit-cli/fixtures/: README.md  busybox-glibc.tar  busybox-musl.tar
x86jit-cli/src/: lib.rs  main.rs  oci.rs  registry.rs
x86jit-cli/tests/: alpine.rs  busybox.rs  glibc.rs  hello_world.rs  httpd.rs  oci_load.rs  registry_pull.rs  registry_run.rs  shell.rs  ubuntu.rs
x86jit-cli/tests/common/: mod.rs
x86jit-core/: Cargo.toml  README.md
x86jit-core/examples/: mmio_device.rs  raw_bytes.rs
x86jit-core/src/: aes.rs  cache.rs  codemap.rs  disasm.rs  exit.rs  f80.rs  features.rs  gfni.rs  interp.rs  ir.rs  jit_abi.rs  lib.rs  lift.rs  lockstep.rs  memory.rs  pclmul.rs  sha.rs  state.rs  vm.rs  x87.rs
x86jit-core/src/interp/: control.rs  integer.rs  mod.rs  vector.rs
x86jit-core/src/lift/: control.rs  integer.rs  mod.rs  vector.rs
x86jit-cranelift/: Cargo.toml  README.md
x86jit-cranelift/examples/: jit_vs_interp.rs
x86jit-cranelift/src/: codegen.rs  lib.rs  perfmap.rs
x86jit-cranelift/src/codegen/: control.rs  integer.rs  memory.rs  mod.rs  vector.rs
x86jit-cranelift/tests/: helper_calls.rs  icount.rs  opt_level.rs  watch_dirty.rs  watch_gate_cost.rs
x86jit-elf/: Cargo.toml  README.md
x86jit-elf/examples/: run_elf.rs
x86jit-elf/src/: lib.rs
x86jit-linux/: Cargo.toml  README.md
x86jit-linux/src/: hostmem.rs  lib.rs  proc.rs  shim.rs  sigsegv.rs  thread.rs
x86jit-linux/tests/: gaplog.rs
x86jit-oci/: Cargo.toml  README.md
x86jit-oci/fixtures/: README.md  alpine.tar  hello-world.tar
x86jit-oci/tests/: hello_world.rs
x86jit-run/: Cargo.toml  README.md
x86jit-run/src/: lib.rs  main.rs
x86jit-run/tests/: alpine.rs  busybox.rs  glibc.rs  hello_world.rs  httpd.rs  registry_pull.rs  shell.rs  ubuntu.rs
x86jit-run/tests/common/: mod.rs
x86jit-tests/: Cargo.toml  README.md
x86jit-tests/compat/: cpuid-waivers.ron
x86jit-tests/programs/: README.md  busybox.elf  djpeg.elf  djpeg_expected.ppm  echo_argv.elf  echo_argv.s  gzip_input.txt  hello_dyn.elf  hello_glibc.elf  hello_go.elf  hello_go.go  hello_i386.elf  hello_i386.s  hello_musl.c  hello_musl.elf  hello_static.elf  hello_static.s  httpserve.go  ld-linux-x86-64.so.2  ld-musl-x86_64.so.1  libc.so.6  lua.elf  newton.c  newton.elf  pthreads.elf  sha256.c  sha256.elf  sha256sum.c  sha256sum.elf  sqlite3.elf  tcpserve.c  tcpserve.elf  tcpserve.go  tcpserve_go.elf  v2.c  v2.elf
x86jit-tests/src/: builder.rs  compare.rs  compat.rs  fuzz.rs  guest.rs  harte.rs  lib.rs  native.rs  oracle.rs  reference.rs  ss286.rs  syscall.rs  unicorn.rs  vector.rs
x86jit-tests/tests/: addr32.rs  bg_tier.rs  boundary.rs  busybox.rs  cache.rs  caddy_serve.rs  cf16.rs  cf32.rs  compat.rs  corpus.rs  coverage_ratchet.rs  differential.rs  differential32.rs  disasm_matches_objdump.rs  djpeg.rs  dynamic.rs  escalate.rs  fuzz.rs  fuzz_avx.rs  fuzz_robustness.rs  glibc.rs  go_hello.rs  go_http.rs  go_net.rs  guard_pages.rs  guest_base.rs  gzip.rs  harte8088.rs  i386.rs  interpreter.rs  jaguar.rs  jit.rs  legacy_upper_audit.rs  lua.rs  mt.rs  mt_atomic_store_coherence.rs  mt_shim.rs  pipe.rs  port_io.rs  python.rs  (+12 more)
x86jit-tests/vectors/addressing/: lea_base_index_scale_disp.ron
x86jit-tests/vectors/flags/: adc_carry_chain.ron  add_signed_overflow.ron  setcc_below_less_greater.ron  sub_borrow.ron
x86jit-tests/vectors/zero_extend/: mov_r32_zeroes_upper.ron  movsx_movzx_byte.ron
(+77 files in other folders)
