[package]
name = "x86jit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Run x86-64 Linux programs under the x86jit recompiler: a host ELF (`run`) or a `docker save` image (`oci`), served from a rootfs, under the interpreter or JIT."
publish = false

[dependencies]
x86jit-core.workspace = true
x86jit-cranelift.workspace = true
x86jit-elf.workspace = true
x86jit-linux.workspace = true
# OCI image reader, folded in as the `oci` module (was x86jit-oci).
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
flate2.workspace = true
clap.workspace = true

[lib]
name = "x86jit_cli"
path = "src/lib.rs"

[[bin]]
name = "x86jit-cli"
path = "src/main.rs"
