[package]
name = "x86jit-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cranelift JIT backend for x86jit (feature-gated, optional)."

[features]
# JIT is opt-in so the core can be built without pulling cranelift (§2, §15).
default = ["jit"]
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native", "dep:memmap2"]

[dependencies]
x86jit-core.workspace = true
cranelift = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
