[package]
name = "x86jit-elf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Optional ELF loader helper: parses segments into a guest memory map (convenience, not core)."
keywords = ["x86-64", "elf", "loader", "emulator", "recompiler"]
categories = ["emulators", "virtualization", "development-tools"]

[dependencies]
x86jit-core.workspace = true
goblin.workspace = true
