[package]
name = "x86jit-oci"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OCI/Docker image reader for x86jit: parse a `docker save` tarball into a rootfs directory + run config. Pure image format; deliberately does NOT depend on x86jit-core (the strongest embedder-boundary guarantee)."
publish = false

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
tar.workspace = true
flate2.workspace = true
