[package]
name = "x86jit-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Differential testing, instruction corpus, and fuzzing for x86jit (§13)."
publish = false

[dependencies]
x86jit-core.workspace = true

[dev-dependencies]
x86jit-core.workspace = true
