[package]
name = "x86jit-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Differential testing, instruction corpus, and fuzzing for x86jit (§13)."
publish = false

[features]
# Unicorn differential oracle + capture CLI. Off by default so the core harness
# (vectors, compare, interpreter oracle) builds without the native Unicorn lib.
unicorn = ["dep:unicorn-engine"]

[dependencies]
x86jit-core.workspace = true
x86jit-linux.workspace = true
# ELF loading for the shared guest-program harness (src/guest.rs).
x86jit-elf.workspace = true
# JIT backend. In [dependencies] (not [dev-dependencies]) so a real `src/bin`
# (the `fuzz` CLI, task-267) can link it — dev-deps are invisible to bins. The
# crate is publish=false, so this never ships. The differential fuzz *campaign*
# (src/fuzz.rs run_campaign) also runs the JIT leg from the library itself.
x86jit-cranelift.workspace = true
serde.workspace = true
ron.workspace = true
hex.workspace = true
# ISA compat map artifact (wiki/compat/coverage.json).
serde_json.workspace = true
# SingleStepTests 80286 corpus loader (src/ss286.rs): the per-opcode MOO files ship
# gzip-compressed (`XX.MOO.gz`), decompressed on load.
flate2.workspace = true
# code_asm assembler for building guest snippets (capture CLI + inline builder).
iced-x86 = { workspace = true, features = ["code_asm"] }
# NativeOracle (src/native.rs): fork + real-CPU execution + ucontext capture.
# x86-64/Linux only; the module is cfg-gated, but the dep is always present (tiny).
libc.workspace = true
# dynamic_linkage → pkg-config finds nixpkgs libunicorn.so and links it (no cmake build).
unicorn-engine = { workspace = true, optional = true, features = ["dynamic_linkage"] }

[[bin]]
name = "capture"
path = "src/bin/capture.rs"
required-features = ["unicorn"]

# AVX/VEX differential fuzz CLI (task-267): `cargo xfuzz` (see .cargo/config.toml).
# A real bin — links the JIT backend via the [dependencies] entry above.
[[bin]]
name = "fuzz"
path = "src/bin/fuzz.rs"
